# bijective-transformers

./: .gitignore  Bijective_Discrete_Diffusion_Colab.ipynb  Bijective_Discrete_Diffusion_Colab_Fixed.ipynb  Dockerfile  README.md  WORKSTATION_SETUP.md  bijective_diffusion_results.md  debug_datasets.py  debug_device_behavior.py  docker-compose.yml  environment.yml  fix_environment.sh  generate_self_contained_notebook.py  gnn_moe_test.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test_bijective_diffusion_complete.py  test_bijective_diffusion_integration.py  test_bijective_diffusion_integration_fixed.py  test_bijective_diffusion_perfect.py  test_bijective_transformer.py  test_device_compatibility_fixed.py  test_device_compatibility_truly_fixed.py  test_masking_simple.py  test_masking_tokens.py  test_notebook_environment.py  train_bijective_final.py  train_bijective_generation_test.py  train_bijective_optimized.py  train_bijective_wikitext2.py  train_bijective_wikitext2_final.py  train_bijective_wikitext2_fixed.py  train_bijective_wikitext2_production.py  train_bijective_with_checkpoints.py  train_bijective_workstation.py  verify_setup.py  working_data_cell.py  working_data_cell_final.py
configs/: config.yaml
configs/data/: wikitext2.yaml
configs/model/: transformer_base.yaml
configs/training/: baseline.yaml
notebooks/: Bijective_Discrete_Diffusion_Complete.ipynb  Bijective_Discrete_Diffusion_Self_Contained.ipynb  bijective_diffusion_colab_script.py  gnn_moe_analysis.py  gnn_moe_architecture.py  gnn_moe_config.py  gnn_moe_data.py  gnn_moe_hyperparam_script.py  gnn_moe_project_report.md  gnn_moe_training.py  gnn_moe_wikitext_script.py  project_status_report.md  run_gnn_moe.py  sweep_gnn_moe.py
notebooks/old/: 5-epoch-Bijective_Discrete_Diffusion_Complete.ipynb  Bijective_Discrete_Diffusion_Complete.ipynb  colab_gnn_debug_wikitext.py  further-plans.md  gnn_moe_script.py  graph_router_moe.py  protoBijective_Discrete_Diffusion_Complete.ipynb  temp_cell_5c.py
project-knowledge/: bijective_diffusion_final_report.md  clean_project_structure.md  computational-considerations.md  confidence-discussion.md  core-concepts.md  device_compatibility_final_success.md  device_compatibility_fix_completion.md  master_save_point.md  optimization_fixes_success.md  phase1_completion.md  phase2_day1_completion.md  phase2_day2_completion.md  phase2_day3_completion.md  phase2_plan.md  phase2_week1_completion.md  phase3_day1_completion.md  phase3_day2_completion.md  project-handoff-doc.md  real_data_integration_success.md  sedd-architecture.md  structure.md
src/: __init__.py
src/data/: __init__.py  corruption.py  corruption_final.py  corruption_fixed.py  corruption_truly_fixed.py  datasets.py  preprocessing.py  wikitext_dataset.py  wikitext_real.py
src/layers/: __init__.py  coupling.py  invertible.py
src/utils/: __init__.py  checkpoint.py  invertibility.py
tests/: __init__.py  test_bijective_diffusion_integration_final.py  test_checkpoint_system.py  test_colab_installation.py
tests/archive/: test_full_block_inverse.py  test_invertible_layers.py  test_phase1.py  test_phase2.py
